# MAV-Project

./: .gitignore  .gitignore.save  .gitignore~  README.md  client  client.c  client.c~  log  log~  lpe_debug.fplot  odroid_setup  odroid_setup~  push
Firmware/build_posix_sitl_default/: CMakeCache.txt  CPackConfig.cmake  build.ninja  rules.ninja
Firmware/build_px4fmu-v2_lpe/: .ninja_log  CPackConfig.cmake  CPackSourceConfig.cmake  airframes.xml  build.ninja  build_git_version.h  px4fmu-v2.export  px4io-v2.export
Frontend/: AnalyticBasedTME.cpp  AsusProLive.cpp  Backend.cpp  Frame.h  main.cpp~
HSR/Frontend/: AnalyticBasedTME.h  AsusProLiveOpenNI2.cpp  Backend.h  FeatureDEM.h  Frontend  ILink.h  Makefile  RANSACBasedTME.cpp  UavComProtocolHandler.cpp  VisualOdometry.cpp  VisualOdometry.h
SwissGuys/: README.txt
SwissGuys/Frontend/: Makefile~  TcpServer.cpp  UavComProtocol.h  main.cpp
catkin_ws/: README.md
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/src/: .rosinstall  .rosinstall.bak
catkin_ws_odroid/devel/: .catkin  .rosinstall  setup.sh
debug/: lpe_debug.fplot
firmware2/build_posix_sitl_default/: .ninja_deps  .ninja_log  CPackSourceConfig.cmake  CTestTestfile.cmake  cmake_install.cmake
firmware2/build_px4fmu-v2_lpe/: .ninja_deps  CMakeCache.txt  CTestTestfile.cmake  build.ninja  build_git_version.h  cmake_install.cmake  parameters.xml  (+1 more)
px4_ws/src/flow_logger/: CMakeLists.txt  CMakeLists.txt~  package.xml~
px4_ws/src/flow_logger/src/: logger.cpp  logger.cpp~  logger.h  lpe.csv  lpe_hover.csv  lpe_pos.csv
util/: lpe_debug.fplot
(+2264 files in other folders)
